--- a/wajibisha/templates/blocks/mission.html
+++ b/wajibisha/templates/blocks/mission.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <div class="mission showcase clearfix">
-  <div class="row wrapper">
+  <div class="wrapper">
     <div class="column-quarter title">
       <h2>OUR MISSION</h2>
     </div>
