--- a/elimu_yangu/universityfinder/templates/index.html
+++ b/elimu_yangu/universityfinder/templates/index.html
@@ -22,7 +22,7 @@
                 <li class="disabled">
                     <a href="#step2" data-toggle="tab" data-title="ENTER YOUR PREFFERED COURSES">
                         <span>Step 02</span>
-                        <span class="info">Set Preferred Courceses</span>
+                        <span class="info">Set Preferred Courses</span>
                     </a>
                 </li>
 
@@ -108,151 +108,18 @@
                             <table class="table table-hover">
                                 <thead>
                                   <tr>
-                                    <th class="col-md-5">Name of Course</th>
-                                    <th class="col-md-3">University</th>
-                                    <th class="col-md-2 text-center">Location</th>
-                                    <th class="col-md-2 text-center">Admission Likelihood</th>
+                                    <th class="col-md-7">Name of Course</th>
+                                    <th class="col-md-5">University</th>
+                                    <!-- <th class="col-md-2 text-center">Location</th>
+                                    <th class="col-md-2 text-center">Admission Likelihood</th> -->
                                   </tr>
                                 </thead>
-                                <tbody>
-                                  <tr>
-                                    <td class="course-name">
-                                        <div>Course Name</div>
-                                        <div class="requirements">Requirements: Eng A, Mat A, Bio B+</div>
-                                    </td>
-                                    <td>University Name</td>
-                                    <td class="text-center">Name of Region</td>
-                                    <td class="text-center">
-                                      <span>85%</span>
-                                      <a class="more-details" href="CourseDetail.htm">More Details</a>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td class="course-name">
-                                        <div>Course Name</div>
-                                        <div class="requirements">Requirements: Eng A, Mat A, Bio B+</div>
-                                    </td>
-                                    <td>University Name</td>
-                                    <td class="text-center">Name of Region</td>
-                                    <td class="text-center">
-                                      <span>84%</span>
-                                      <a class="more-details" href="CourseDetail.htm">More Details</a>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td class="course-name">
-                                        <div>Course Name</div>
-                                        <div class="requirements">Requirements: Eng A, Mat A, Bio B+</div>
-                                    </td>
-                                    <td>University Name</td>
-                                    <td class="text-center">Name of Region</td>
-                                    <td class="text-center">
-                                      <span>83%</span>
-                                      <a class="more-details" href="CourseDetail.htm">More Details</a>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td class="course-name">
-                                        <div>Course Name</div>
-                                        <div class="requirements">Requirements: Eng A, Mat A, Bio B+</div>
-                                    </td>
-                                    <td>University Name</td>
-                                    <td class="text-center">Name of Region</td>
-                                    <td class="text-center">
-                                      <span>82%</span>
-                                      <a class="more-details" href="CourseDetail.htm">More Details</a>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td class="course-name">
-                                        <div>Course Name</div>
-                                        <div class="requirements">Requirements: Eng A, Mat A, Bio B+</div>
-                                    </td>
-                                    <td>University Name</td>
-                                    <td class="text-center">Name of Region</td>
-                                    <td class="text-center">
-                                      <span>80%</span>
-                                      <a class="more-details" href="CourseDetail.htm">More Details</a>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td class="course-name">
-                                        <div>Course Name</div>
-                                        <div class="requirements">Requirements: Eng A, Mat A, Bio B+</div>
-                                    </td>
-                                    <td>University Name</td>
-                                    <td class="text-center">Name of Region</td>
-                                    <td class="text-center">
-                                      <span>77%</span>
-                                      <a class="more-details" href="CourseDetail.htm">More Details</a>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td class="course-name">
-                                        <div>Course Name</div>
-                                        <div class="requirements">Requirements: Eng A, Mat A, Bio B+</div>
-                                    </td>
-                                    <td>University Name</td>
-                                    <td class="text-center">Name of Region</td>
-                                    <td class="text-center">
-                                      <span>75%</span>
-                                      <a class="more-details" href="CourseDetail.htm">More Details</a>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td class="course-name">
-                                        <div>Course Name</div>
-                                        <div class="requirements">Requirements: Eng A, Mat A, Bio B+</div>
-                                    </td>
-                                    <td>University Name</td>
-                                    <td class="text-center">Name of Region</td>
-                                    <td class="text-center">
-                                      <span>74%</span>
-                                      <a class="more-details" href="CourseDetail.htm">More Details</a>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td class="course-name">
-                                        <div>Course Name</div>
-                                        <div class="requirements">Requirements: Eng A, Mat A, Bio B+</div>
-                                    </td>
-                                    <td>University Name</td>
-                                    <td class="text-center">Name of Region</td>
-                                    <td class="text-center">
-                                      <span>70%</span>
-                                      <a class="more-details" href="CourseDetail.htm">More Details</a>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td class="course-name">
-                                        <div>Course Name</div>
-                                        <div class="requirements">Requirements: Eng A, Mat A, Bio B+</div>
-                                    </td>
-                                    <td>University Name</td>
-                                    <td class="text-center">Name of Region</td>
-                                    <td class="text-center">
-                                      <span>68%</span>
-                                      <a class="more-details" href="CourseDetail.htm">More Details</a>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td class="course-name">
-                                        <div>Course Name</div>
-                                        <div class="requirements">Requirements: Eng A, Mat A, Bio B+</div>
-                                    </td>
-                                    <td>University Name</td>
-                                    <td class="text-center">Name of Region</td>
-                                    <td class="text-center">
-                                      <span>65%</span>
-                                      <a class="more-details" href="CourseDetail.htm">More Details</a>
-                                    </td>
-                                  </tr>
-                                </tbody>
+                                <tbody id="resultCourses"></tbody>
                             </table>
                         </div>
                     </div>
 
-                    <div class="col-md-12">
+                    <!-- <div class="col-md-12">
                         <h2 class="title text-center">OTHER COURSES THAT YOU'RE ADMISSIBLE FOR</h2>
                         <div class="box-table">
                             <table class="table table-hover">
@@ -411,7 +278,7 @@
                           <li class="page-item" data-page="5"><span class="page-link">5</span></li>
                           <li class="page-item solid" data-page="next"><span class="page-link">NEXT</span></li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="clearfix">
