--- a/elimu_yangu/careerguide/templates/careerguide/school.html
+++ b/elimu_yangu/careerguide/templates/careerguide/school.html
@@ -650,7 +650,7 @@
             lineColor: "#C0504E",
             labelFontColor: "#C0504E",
             tickLength: 5,
-      	    tickThickness: 0
+      	    tickThickness: 0,
             gridThickness: 0
           },
           toolTip: {
