--- a/elimu_yangu/templates/homepage_country.html
+++ b/elimu_yangu/templates/homepage_country.html
@@ -99,5 +99,5 @@
 
     maps.drawMapForHomepage('{{ geo_data.first_child_level }}', '{{ HURUMAP.default_geo_version }}', centre, zoom);
     </script>
-    <script src="{% static 'js/data.query.builder.js' %}"></script>
+    <!-- <script src="{% static 'js/data.query.builder.js' %}"></script> -->
 {% endblock %}
