--- a/elimu_yangu/leaguetable/templates/leaguetable/embed.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/embed.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-<div class="content-container wrapper clearfix" style="overflow:auto;">
+<!-- <div class="content-container wrapper clearfix" style="overflow:auto;">
     <div class="holder" style="width: 100%; margin-bottom: 0px;">
         <div class="" style="width: 49%; margin-bottom: 0px; float: left;">
             <h2><i class="fa fa-arrow-up"></i>&nbsp;&nbsp;10 Best Schools in {{ geography.this.short_name }}</h2>
@@ -49,6 +49,67 @@
                     {% endfor %}
                 </tbody>
             </table>
+        </div>
+    </div>
+</div> -->
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <!--
+            * =================================
+            * Top School List
+            * =================================
+            -->
+            <div class="col-md-6">
+                <h3 class="title">10 Top Schools</h3>
+                <ul class="list-group school">
+                  {% for school in schools.top_schools|slice:":10" %}
+                  <li class="list-group-item">
+                      <a href="leaguetable/schools/{{ school.code }}">
+                          <div class="col-xs-5">
+                              <div class="school-name">{{ school.name|slice:":-16" }} SCHOOL</div>
+                              <div class="school-type">Mixed</div>
+                          </div>
+                          <div class="col-xs-5">
+                              <div class="school-rank">#{{ school.national_rank_all }} in Tanzania</div>
+                              <div class="school-rank">#{{ school.regional_rank_all }} in {{ school.region }}</div>
+                          </div>
+                          <div class="col-xs-2">
+                              {{ school.pass_rate }}
+                          </div>
+                      </a>
+                  </li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <!--
+            * =================================
+            * Lowest School List
+            * =================================
+            -->
+            <div class="col-md-6">
+                <h3 class="title">10 Lowest Schools</h3>
+                <ul class="list-group school">
+                  {% for school in schools.lowest_schools|slice:":10" %}
+                  <li class="list-group-item">
+                      <a href="leaguetable/schools/{{ school.code }}">
+                          <div class="col-xs-5">
+                              <div class="school-name">{{ school.name|slice:":-16" }} SCHOOL</div>
+                              <div class="school-type">Mixed</div>
+                          </div>
+                          <div class="col-xs-5">
+                              <div class="school-rank">#{{ school.national_rank_all }} in Tanzania</div>
+                              <div class="school-rank">#{{ school.regional_rank_all }} in {{ school.region }}</div>
+                          </div>
+                          <div class="col-xs-2">
+                              {{ school.pass_rate }}
+                          </div>
+                      </a>
+                  </li>
+                    {% endfor %}
+                </ul>
+            </div>
         </div>
     </div>
 </div>
