careerguide landing page and leaguetable comparison

--- a/elimu_yangu/leaguetable/templates/leaguetable/profile/profile_detail.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/profile/profile_detail.html
@@ -79,7 +79,7 @@
                   <li class="list-group-item">
                       <a href="leaguetable/schools/{{ school.code }}">
                           <div class="col-xs-5">
-                              <div class="school-name">{{ school.name|slice:":-16" }} SCHOOL</div>
+                              <div class="school-name">{{ school.name|slice:":-16" }}</div>
                               <div class="school-type">Mixed</div>
                           </div>
                           <div class="col-xs-5">
@@ -106,7 +106,7 @@
                   <li class="list-group-item">
                       <a href="leaguetable/schools/{{ school.code }}">
                           <div class="col-xs-5">
-                              <div class="school-name">{{ school.name|slice:":-16" }} SCHOOL</div>
+                              <div class="school-name">{{ school.name|slice:":-16" }}</div>
                               <div class="school-type">Mixed</div>
                           </div>
                           <div class="col-xs-5">
