--- a/elimu_yangu/careerguide/templates/careerguide/homepage.html
+++ b/elimu_yangu/careerguide/templates/careerguide/homepage.html
@@ -106,6 +106,73 @@
         </div>
     </div>
     {% endif %}
+
+    {% if topschools %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h3 class="title text-center">Overall best performing schools for Ordinary Level 2017 </h3>
+                <div class="box-table">
+                    <table class="table table-hover">
+                        <thead>
+                          <tr>
+                            <th class="col-md-4">Name of School</th>
+                            <th class="col-md-3">Category</th>
+                            <th class="col-md-2">Region</th>
+                            <th class="col-md-1">School GPA</th>
+                            <th class="col-md-1">National Ranking</th>
+                            <th class="col-md-1">Regional Ranking</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          {% for school in topschools.top_Olevel %}
+                          <tr>
+                            <td><a href="/careerguide/school/{{ school.schoolcode }}">{{ school.schoolname }}</td>
+                              <td>{{ school.category }}</td>
+                              <td>{{ school.region }}</td>
+                              <td>{{ school.gpa| floatformat:3 }}</td>
+                              <td>{{ school.natranking }}</td>
+                              <td>{{ school.regranking }}</td>
+                          </tr>
+                          {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h3 class="title text-center">Overall best performing schools for Advance Level 2017 </h3>
+                <div class="box-table">
+                    <table class="table table-hover">
+                        <thead>
+                          <tr>
+                            <th class="col-md-4">Name of School</th>
+                            <th class="col-md-3">Category</th>
+                            <th class="col-md-2">Region</th>
+                            <th class="col-md-1">School GPA</th>
+                            <th class="col-md-1">National Ranking</th>
+                            <th class="col-md-1">Regional Ranking</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          {% for school in topschools.top_Alevel %}
+                          <tr>
+                            <td><a href="/careerguide/school/{{ school.schoolcode }}">{{ school.schoolname }}</td>
+                              <td>{{ school.category }}</td>
+                              <td>{{ school.region }}</td>
+                              <td>{{ school.gpa| floatformat:3 }}</td>
+                              <td>{{ school.natranking }}</td>
+                              <td>{{ school.regranking }}</td>
+                          </tr>
+                          {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endif %}
   </div>
 
 {% endblock %}
