--- a/elimu_yangu/templates/homepage.html
+++ b/elimu_yangu/templates/homepage.html
@@ -49,7 +49,7 @@
               <h3 class="title">CAREER GUIDE</h3>
               <div class="description">Find schools for you to go in your locate that align best with your career choice.</div>
           </a>
-          <a id="universityFinder" class="col-sm-3 option-box" href="/university_finder">
+          <a id="universityFinder" class="col-sm-3 option-box" href="/university-finder">
               <h3 class="title">UNIVERSITY FINDER</h3>
               <div class="description">Find the best possible university course to attend based on your performance and preferences.</div>
           </a>
