--- a/elimu_yangu/leaguetable/templates/leaguetable/embed.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/embed.html
@@ -52,7 +52,7 @@
         </div>
     </div>
 </div> -->
-
+<div class="content-container wrapper clearfix" style="overflow:auto;">
 <div class="container">
     <div class="row">
         <div class="col-md-12">
@@ -112,4 +112,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
