--- a/elimu_yangu/leaguetable/templates/leaguetable/profile/head2head.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/profile/head2head.html
@@ -26,7 +26,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="">
+                    <a class="navbar-brand" href="/">
                         <img class="logo" src="{% static 'img/logo0.png' %}" />
                     </a>
                 </div>
