--- a/elimu_yangu/leaguetable/templates/leaguetable/profile/profile_detail.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/profile/profile_detail.html
@@ -27,7 +27,7 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="">
+                  <a class="navbar-brand" href="/">
                       <img class="logo" src="{% static 'img/logo0.png' %}" />
                   </a>
               </div>
