elimu yangu description

--- a/elimu_yangu/templates/homepage_country.html
+++ b/elimu_yangu/templates/homepage_country.html
@@ -1,5 +1,5 @@
 {% extends '_base.html' %}{% load staticfiles %}
-
+{% block head_meta_description %}{{ HURUmap.name }} provides useful facts on schools data across regions, and suggests best schools and university courses for students{% endblock %}
 {% block body_id %}homepage{% endblock %}
 
 {% block head_css_extra %}
