--- a/wajibisha/templates/_base.html
+++ b/wajibisha/templates/_base.html
@@ -23,10 +23,10 @@
 
 
 {% block header_menu %}
-    <li><a href="#">Promise Tracker</a></li>
-    <li><a href="#">Articles</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="/promises">Promise Tracker</a></li>
+    <li><a href="/articles.html">Articles</a></li>
+    <li><a href="about/">About</a></li>
+    <li><a href="/contact.html">Contact</a></li>
 
 {% endblock header_menu %}
 
