--- a/wajibisha/static/css/wajibisha.css
+++ b/wajibisha/static/css/wajibisha.css
@@ -1,6 +1,5 @@
 body {
-  background-color: #F6F9FC !important;
-  color: #707070!important;}
+  background-color: #F6F9FC !important; }
 
 #page-header {
   background-color: #0067a3; }
@@ -54,7 +53,7 @@ body {
   position: relative;
   z-index: 100;
   transform-origin: -40px;
-  transform: skewY(-5deg);
+  transform: skewY(-6deg);
   box-shadow: 0 4px 2px -2px gray; }
   .clipped-header .wrapper {
     position: absolute;
@@ -63,7 +62,7 @@ body {
     top: 0;
     bottom: 0;
     z-index: 103;
-    transform: skewY(5deg);
+    transform: skewY(6deg);
     transform-origin: 0; }
   .clipped-header .wrapper .presentation-img {
     z-index: 1003;
@@ -72,8 +71,7 @@ body {
     right: 0; }
 
 .showcase h2 {
-  color: #0067a3; 
-  font-size:28px;}
+  color: #0067a3; }
 
 .space {
   padding-top: 1rem; }
@@ -83,7 +81,7 @@ body {
 
 .how-it-works img {
   max-width: 100%;
-  width: 180px; }\
+  width: 180px; }
 
 .how-it-works p {
   margin-bottom: 0;
@@ -100,30 +98,26 @@ body {
   height: 350px;
   background-color: #fff; }
 
-
-span.input-group-btn {
-  position: absolute;
-  right: 8px;
-  top: 5px;
-  bottom:2px;
-  z-index: 999;
-}
-input.form-control-lg {
-  height:3.2rem;
-}
-
-.clipped-header select{
-  width:250px;
-  background-color:#4CAE4E;
-  border-color:#4CAE4E;
-  color: white;
-}
 .tweet-card {
-  height:180px;
-  width:23rem;
-  margin:1rem;
-  padding:0;
-  border:5px solid; 
-  border-color:#BFD9E8!important;
-}
+  height: 200px;
+  margin: 2rem;
+  border-color: #B7E4FF;
+  padding: 0; }
 
+.input-group-btn {
+  position: relative;
+  top: 5px;
+  z-index: 999;
+  margin-left: -190px; }
+
+.input-group > .form-control {
+  height: 3.4rem;
+  border-color: darkgrey;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); }
+
+.team {
+  height: 250px;
+  margin: 3rem;
+  border-color: #B7E4FF;
+  padding: 0; }
+/*# sourceMappingURL=../../../../../../../../static/css/wajibisha.css.map */
