--- a/wajibisha/templates/blocks/tweets.html
+++ b/wajibisha/templates/blocks/tweets.html
@@ -1,8 +1,9 @@
 {% load staticfiles %}
-
-<div class=" container pt-5 pb-5" style="height:100vh;width:100%;min-height:auto;">
+<section class="tweet-section" style="width:100%;height:auto;">
+<div class=" container pt-5 pb-5" >
+  <div class="d-flex justify-content-center"><h3>Latest tweets<h3></div>
 	<div class="row pt-5 pb-5">
-		<div class="card-group">
+		<div class="card-group pb-5">
 			<div class="tweet-card card border rounded" >
         <div class="d-flex flex-row">
           <div class="pl-2 pt-4"><img class="rounded-circle" src="http://via.placeholder.com/70x70" alt="image one"></div>
@@ -44,17 +45,18 @@
       </div>
     </div>
   </div>
-  <hr class="center pl-5 width="40%">
-  <h5 class="text-center pt-5">Sign up for weekly for weekly tracker updates in your inbox below.</h5>
+  <div class="d-flex justify-content-center pt-5 pb-5"><hr align="center" width="32%" style="border-color:black;"></div>
+  <h4 class="text-center pt-5">Sign up for weekly for weekly tracker updates in your inbox below.</h4>
   <form class="form-inline justify-content-center pt-5">
     <div class="col-lg-8 center-block">
-      <div class="input-group input-group-lg border">
-        <input type="text" class="form-control form-control-lg" placeholder="Email">
+      <div class="input-group input-group-lg rounded">
+        <input type="text" class="form-control form-control-lg rounded" placeholder="hello@example.com">
         <span class="input-group-btn">
-          <button class="btn btn-md btn-primary" type="button">Subscribe</button>
+          <button class="btn btn-md btn-primary" type="button" style="background-color:#0067a3;width:180px;border-color:#0067a3;font-size:1.2rem;font-weight:100;border-radius:4px;">SUBCRIBE</button>
         </span>
       </div>
     </div>
   </form>
 </div>
 </div>
+</section>
