length majors unifinder

--- a/elimu_yangu/static/css/hurumap.css
+++ b/elimu_yangu/static/css/hurumap.css
@@ -301,4 +301,4 @@ body {
 .geography-ico {
   display: none; }
 
-/*# sourceMappingURL=../../../../../../../../static/css/hurumap.css.map */
+/*# sourceMappingURL=../../../../../../../../../static/css/hurumap.css.map */
