--- a/elimu_yangu/static/css/wazimap.css
+++ b/elimu_yangu/static/css/wazimap.css
@@ -4223,4 +4223,4 @@ header.section-contents h1 a {
 .profile-head2head-frame #uvTab {
   display: none; }
 
-/*# sourceMappingURL=../../../../../../../../../../../../../static/css/wazimap.css.map */
+/*# sourceMappingURL=../../../../../../../../../../../../../../static/css/wazimap.css.map */
