--- a/wajibisha/templates/_base.html
+++ b/wajibisha/templates/_base.html
@@ -24,9 +24,9 @@
 
 {% block header_menu %}
     <li><a href="/promises">Promise Tracker</a></li>
-    <li><a href="/articles.html">Articles</a></li>
-    <li><a href="about/">About</a></li>
-    <li><a href="/contact.html">Contact</a></li>
+    <li><a href="/articles">Articles</a></li>
+    <li><a href="/about">About</a></li>
+    <li><a href="/contact">Contact</a></li>
 
 {% endblock header_menu %}
 
