--- a/wajibisha/templates/articles.html
+++ b/wajibisha/templates/articles.html
@@ -47,7 +47,7 @@
           </div>
         </div><br>
 
-        <div class="card d-flex flex-lg-row p-0" style="height:280px;width:660px">
+        <div class="card d-flex flex-lg-row p-0" style="height:280px;width:660px;margin:10px;">
           <div class="col-md-5 p-0"><img src="{% static 'img/articles/fidelodingaroad.jpg' %}" class="card-img p-0" alt="Image of story" height="280px"></div>
           <div class="col-md-7">
             <h6 class="pt-4 small" style="margin:0!important;">NAIROBI COUNTY</h6>
@@ -65,7 +65,7 @@
         </div>
 
         <div class="col-4">
-          <div class="card p-0" style="height:580px;width:300px;">
+          <div class="card p-0" style="height:580px;width:300px;margin:10px;">
             <img src="{% static 'img/articles/fidelodingaroad.jpg' %}" class="card-img-body p-0" alt="Story Image" style="height:300px;">
             <div class="card-body">
               <h6 class="pt-2 small" style="margin:0!important;">NAIROBI COUNTY</h6>
@@ -87,7 +87,7 @@
 
       <div class="container pl-2" style="height:200vh;min-height;100%;">
         <div class="row pl-5 pr-5 pt-5 pb-5">
-        <div class="card-deck">
+        <div class="card-deck" style="margin:10px;">
           <div class="card p-0" style="height:580px;">
             <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
             <div class="card-body">
